# citibike2strava

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODOS.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OAUTH_SETUP.md  SECURITY.md
extension/: README.md  content.js  manifest.json  options.html  options.js
src/citibike2strava/: __init__.py  cli.py  config.py  eml.py  geo.py  gmail_client.py  gpx.py  models.py  pipeline.py  polyline.py  processed.py  receipt.py  scheduler.py  server.py  strava_client.py  watch.py
src/citibike2strava/auth/: __init__.py  google_auth.py  strava_auth.py  token_store.py
tests/: test_config.py  test_eml.py  test_gmail_query.py  test_gpx.py  test_pipeline.py  test_polyline.py  test_processed.py  test_receipt.py  test_scheduler.py  test_server.py  test_strava_client.py  test_watch.py
tests/fixtures/: sample_receipt.html
